# mork-converter

./: CHANGES  LICENSE  README  mork-documentation.txt  mork.py  mork2rdf.py  setup.cfg  setup.py
doc/: FILTERS  mork-format.txt  tutorial.py
old/: demork.py
other/: README  demork.py
ply/: mork.py  morkast.py  morkdb.py  morkinterpret.py  morklex.py  morkyacc.py  notes.txt
ply/output/: __init__.py  csv.py  util.py
recursive_descent/: mork.py
src/: mork  morkast.py  notes.txt  parseTest.py
src/MorkDB/: moduleTools.py  morkast.py  morkdb.py  morklex.py  morkyacc.py
src/MorkDB/filter/: util.py
src/MorkDB/filter/database/: __init__.py  emptycells.py  encodings.py  mime_headers.py  nometa.py  times.py  utf16.py
src/MorkDB/filter/output/: __init__.py  csv.py  xml.py
src/MorkDB/filters/: __init__.py  conversions.py  converters.py  csv_output.py  encoding.py  filterbase.py  json_output.py  mime_headers.py  simple.py  times.py  unicode.py  xml_output.py
src/MorkDB/output/: __init__.py  csv.py  util.py  xml.py
src/output/: xml.py
tests/: lexer_test.txt
