[metadata]
name = mork-converter
author = Kevin Goodsell
author_email = kevin-opensource@omegacrash.net
description = Mork converter
url = https://github.com/KevinGoodsell/mork-converter
project_urls =
    Bug Tracker = https://github.com/KevinGoodsell/mork-converter/issues
classifiers =
    Programming Language :: Python :: 2
    License :: OSI Approved :: GNU General Public License v2 (GPLv2)
    Operating System :: OS Independent

[options]
python_requires = >=2.7, <3
setup_requires =
    setuptools_scm < 6
install_requires =
    ply==3.*
package_dir =
    =src
packages = find:
scripts = src/mork

[options.packages.find]
where = src
